# ucplots

./: .flake8  .gitignore  .readthedocs.yaml  READme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: branch.yaml  release.yaml
UCPlotter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: API.rst  conf.py  index.rst  requirements.in  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst  tutorials.rst
tests/: test_ucplotter.py
ucplots/: __init__.py  plot_2D_shapes.py  ucimage.py  ucplots.py  utils.py
ucplots/statistics/: readme.md  stats.py
ucplotter/: __init__.py  plot_2D_shapes.py  ucimage.py  ucplotter.py
