[tool.poetry]
name = "ucplotter"
version = "0.1.0"
description = "For plotting (repeating) unit cell images of composite materials"
authors = ["Rajesh Nakka <338rajesh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
