[tool.poetry]
name = "ucplots"
packages = [
    { include = "ucplots" },
]
version = "0.1.0"
description = "For plotting repeating domains in two dimensional space."
authors = ["Rajesh Nakka <338rajesh@gmail.com>"]
license = "MIT"
readme = ["READme.md", "LICENSE"]
homepage = "https://ucplots.readthedocs.io"
repository = "https://github.com/338rajesh/ucplots"
keywords = ["plotting", "microstructure"]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pillow = "^10.0.0"
h5py = "^3.9.0"
matplotlib = "^3.7.2"
setuptools = "^68.1.2"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
